# github-runner-proxmox-manager

./: Cargo.toml
schema-generator/: test.json  test2.json
schema-generator/src/: lib.rs  main.rs
src/: main.rs
